@@ -17,10 +17,17 @@
     </modules>
 
     <properties>
+
         <java.version>13</java.version>
+
+        <jar.plugin.version>3.2.0</jar.plugin.version>
+        <source.plugin.version>3.2.1</source.plugin.version>
+
         <logback.version>1.1.11</logback.version>
         <slf4j.version>1.7.12</slf4j.version>
         <junit.version>5.6.2</junit.version>
+        <jmh.version>1.21</jmh.version>
+
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -59,6 +66,18 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -66,6 +85,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>${jar.plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -84,6 +104,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>${source.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -111,6 +132,17 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>copy-resources</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <executions>
                         <execution>
@@ -127,17 +159,6 @@
                         </excludes>
                     </configuration>
                 </plugin>
-                <!--                <plugin>-->
-                <!--                    <groupId>org.apache.maven.plugins</groupId>-->
-                <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
-                <!--                    <version>3.8.0</version>-->
-                <!--                    <configuration>-->
-                <!--                        <source>13</source>-->
-                <!--                        <target>13</target>-->
-                <!--                        <release>13</release>-->
-                <!--                        &lt;!&ndash;                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>&ndash;&gt;-->
-                <!--                    </configuration>-->
-                <!--                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -156,7 +177,6 @@
                         <argLine>--illegal-access=permit -XX:+UseParallelGC -server</argLine>
                     </configuration>
                 </plugin>
-
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -211,7 +231,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
+                    <version>3.8.1</version>
                     <configuration combine.self="append">
 
                         <source>${java.version}</source>
@@ -227,7 +247,9 @@
                             <arg>-J--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=java.base/javax.crypto=ALL-UNNAMED</arg>
                             <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                            <arg>-Xplugin:ErrorProne
+                            <arg>
+                                -Xplugin:ErrorProne
+                                -XepExcludedPaths:.*generated.*
                                 -XepOpt:Immutable:KnownImmutable=javax.money.CurrencyUnit
                                 -XepDisableWarningsInGeneratedCode
                                 -Xep:ConstantField:WARN
@@ -256,6 +278,7 @@
                                 -Xep:MultipleUnaryOperatorsInMethodCall:WARN
                                 -Xep:PrivateConstructorForUtilityClass:WARN
                                 -Xep:UngroupedOverloads:WARN
+
                             </arg>
                         </compilerArgs>
                         <annotationProcessorPaths combine.self="append">
@@ -264,148 +287,117 @@
                                 <artifactId>error_prone_core</artifactId>
                                 <version>2.3.4</version>
                             </path>
+                            <path>
+                                <groupId>org.openjdk.jmh</groupId>
+                                <artifactId>jmh-generator-annprocess</artifactId>
+                                <version>${jmh.version}</version>
+                            </path>
                         </annotationProcessorPaths>
+
+
                         <showWarnings>true</showWarnings>
 
                     </configuration>
                 </plugin>
-
-
             </plugins>
         </pluginManagement>
     </build>
 
-    <profiles>
-        <profile>
-            <id>scrutinize</id>
+<!--    <profiles>-->
+<!--        <profile>-->
+<!--            <id>profile</id>-->
 
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-checkstyle-plugin</artifactId>
-                        <version>3.0.0</version>
-                        <executions>
-                            <execution>
-                                <id>validate</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <configLocation>${checkstyle.config.path}/checkstyle.xml</configLocation>
-                            <propertyExpansion>checkstyle.config.path=${checkstyle.config.path}</propertyExpansion>
-                            <encoding>UTF-8</encoding>
-                            <consoleOutput>true</consoleOutput>
-                            <failOnViolation>true</failOnViolation>
-                            <violationSeverity>warning</violationSeverity>
-                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                        </configuration>
-                    </plugin>
+<!--            <build>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-source-plugin</artifactId>-->
+<!--                        <version>${source.plugin.version}</version>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <id>attach-sources</id>-->
+<!--                                <goals>-->
+<!--                                    <goal>jar</goal>-->
+<!--                                </goals>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                    </plugin>-->
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-jar-plugin</artifactId>-->
+<!--                        <version>${jar.plugin.version}</version>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <goals>-->
+<!--                                    <goal>test-jar</goal>-->
+<!--                                    <goal>jar</goal>-->
+<!--                                </goals>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                        <inherited>false</inherited>-->
+<!--                        <configuration>-->
+<!--                            <excludes>-->
+<!--                                <exclude>**/logback.xml</exclude>-->
+<!--                            </excludes>-->
+<!--                        </configuration>-->
+<!--                    </plugin>-->
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-surefire-plugin</artifactId>-->
+<!--                        <version>2.22.0</version>-->
+<!--                        <configuration>-->
+<!--                            <argLine>-->
+<!--                                &#45;&#45;illegal-access=permit -XX:+UseParallelGC-->
+<!--                            </argLine>-->
+<!--                        </configuration>-->
+<!--                    </plugin>-->
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--                        <version>2.22.2</version>-->
+<!--                        <configuration>-->
+<!--                            <argLine>&#45;&#45;illegal-access=permit -XX:+UseParallelGC -server</argLine>-->
+<!--                        </configuration>-->
+<!--                    </plugin>-->
 
-                    <plugin>
-                        <version>3.1.12.2</version>
-                        <groupId>com.github.spotbugs</groupId>
-                        <artifactId>spotbugs-maven-plugin</artifactId>
-                        <configuration>
-                            <!--                    <excludeFilterFile>${project.basedir}/src/test/resources/findbugs-exclude.xml</excludeFilterFile>-->
-                            <effort>Max</effort>
-                            <threshold>Low</threshold>
-                            <xmlOutput>true</xmlOutput>
-                            <spotbugsXmlOutputDirectory>${project.build.directory}/findbugs</spotbugsXmlOutputDirectory>
-                            <!--
-                                NullAway checks NPE's;
-                                FindUncalledPrivateMethods is broken
-                            -->
-                            <omitVisitors>FindNullDeref,InitializeNonnullFieldsInConstructor,CheckRelaxingNullnessAnnotation,LoadOfKnownNullValue,FindUncalledPrivateMethods</omitVisitors>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>analyze-compile</id>
-                                <phase>compile</phase>
-                                <goals>
-                                    <goal>check</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <configuration combine.self="append">
-                            <release>${java.version}</release>
-                            <compilerArgs combine.self="override">
-                                <arg>-Werror</arg>
-                                <arg>-Xlint:all,-fallthrough,-processing,-serial,-classfile,-path</arg>
-                                <arg>-parameters</arg>
-                                <arg>-XDcompilePolicy=simple</arg>
-                                <arg>-J--illegal-access=debug</arg>
-                                <arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=java.base/javax.crypto=ALL-UNNAMED</arg>
-                                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                                <arg>-Xplugin:ErrorProne
-                                    -XepOpt:Immutable:KnownImmutable=javax.money.CurrencyUnit
-                                    -XepDisableWarningsInGeneratedCode
-                                    -Xep:ConstantField:WARN
-                                    -Xep:ClassName:WARN
-                                    -Xep:DivZero:WARN
-                                    -Xep:EmptyIf:WARN
-                                    -Xep:IterablePathParameter:WARN
-                                    -Xep:LongLiteralLowerCaseSuffix:WARN
-                                    -Xep:AnnotationPosition:WARN
-                                    -Xep:EmptyTopLevelDeclaration:WARN
-                                    -Xep:EqualsBrokenForNull:WARN
-                                    -Xep:FunctionalInterfaceClash:WARN
-                                    -Xep:InvalidInlineTag:WARN
-                                    -Xep:InvalidParam:WARN
-                                    -Xep:MissingDefault:WARN
-                                    -Xep:NonCanonicalStaticMemberImport:WARN
-                                    -Xep:PrimitiveArrayPassedToVarargsMethod:WARN
-                                    -Xep:RedundantOverride:WARN
-                                    -Xep:RedundantThrows:WARN
-                                    -Xep:StaticQualifiedUsingExpression:WARN
-                                    -Xep:StringEquality:WARN
-                                    -Xep:UnusedException:WARN
-                                    -Xep:ConstantField:WARN
-                                    -Xep:MultiVariableDeclaration:WARN
-                                    -Xep:MultipleTopLevelClasses:WARN
-                                    -Xep:MultipleUnaryOperatorsInMethodCall:WARN
-                                    -Xep:PrivateConstructorForUtilityClass:WARN
-                                    -Xep:UngroupedOverloads:WARN
-                                </arg>
-                            </compilerArgs>
-                            <annotationProcessorPaths combine.self="append">
-                                <path>
-                                    <groupId>com.google.errorprone</groupId>
-                                    <artifactId>error_prone_core</artifactId>
-                                    <version>2.3.4</version>
-                                </path>
-                            </annotationProcessorPaths>
-                            <showWarnings>true</showWarnings>
-                        </configuration>
-                    </plugin>
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-compiler-plugin</artifactId>-->
+<!--                        <version>3.8.0</version>-->
+<!--                        <configuration combine.self="append">-->
 
-                </plugins>
-            </build>
+<!--                            <source>${java.version}</source>-->
+<!--                            <target>${java.version}</target>-->
+<!--                            <release>${java.version}</release>-->
 
-            <reporting>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-checkstyle-plugin</artifactId>
-                        <version>3.0.0</version>
-                        <configuration>
-                            <configLocation>${checkstyle.config.path}/checkstyle.xml</configLocation>
-                            <propertyExpansion>checkstyle.config.path=${checkstyle.config.path}</propertyExpansion>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </reporting>
-        </profile>
-    </profiles>
+<!--                            <annotationProcessorPaths combine.self="append">-->
+<!--                                <path>-->
+<!--                                    <groupId>org.openjdk.jmh</groupId>-->
+<!--                                    <artifactId>jmh-generator-annprocess</artifactId>-->
+<!--                                    <version>${jmh.version}</version>-->
+<!--                                </path>-->
+<!--                            </annotationProcessorPaths>-->
+<!--                            <showWarnings>true</showWarnings>-->
+<!--                        </configuration>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </build>-->
+
+<!--            <reporting>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-checkstyle-plugin</artifactId>-->
+<!--                        <version>3.0.0</version>-->
+<!--                        <configuration>-->
+<!--                            <configLocation>${checkstyle.config.path}/checkstyle.xml</configLocation>-->
+<!--                            <propertyExpansion>checkstyle.config.path=${checkstyle.config.path}</propertyExpansion>-->
+<!--                        </configuration>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </reporting>-->
+<!--        </profile>-->
+<!--    </profiles>-->
 
 
 </project>
